--- a/wordpressboss.com/cp/wize-demo/blog.html
+++ b/wordpressboss.com/cp/wize-demo/blog.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 
-<!-- Mirrored from wordpressboss.com/cp/wize-demo/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 30 May 2024 04:45:13 GMT -->
+<!-- Mirrored from wordpressboss.com/cp/janani-demo/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 30 May 2024 04:45:13 GMT -->
 <head>
     <!-- META -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Wize - Creative Portfolio Showcase Template">
+    <meta name="description" content="janani - Creative Portfolio Showcase Template">
     <meta name="keywords" content="personal, portfolio new, html, one page, bootstrap, new html template, design, creative, onepage, clean, modern">
     <meta name="author" content="Tanvir Hossain">
     <!-- PAGE TITLE -->
-    <title>Wize - Creative Personal Portfolio</title>
+    <title>janani - Creative Personal Portfolio</title>
     <!-- FAVICON ICON -->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon" />
     <!-- ALL GOOGLE FONTS -->
@@ -294,5 +294,5 @@
 </body>
 
 
-<!-- Mirrored from wordpressboss.com/cp/wize-demo/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 30 May 2024 04:45:20 GMT -->
+<!-- Mirrored from wordpressboss.com/cp/janani-demo/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 30 May 2024 04:45:20 GMT -->
 </html>
